remove unused files

--- a/src/Com0Com.CSharp/Com0Com.CSharp.csproj
+++ b/src/Com0Com.CSharp/Com0Com.CSharp.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -38,11 +38,7 @@
     <Compile Include="CrossoverPortPair.cs" />
     <Compile Include="Com0ComSetupCFacade.cs" />
     <Compile Include="Com2TcpFacade.cs" />
-    <Compile Include="Configs\Com2TcpConfig.cs" />
-    <Compile Include="Configs\Com0ComConfig.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Configs\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
