--- a/src/Com0Com.CSharp/Com0Com.CSharp.csproj
+++ b/src/Com0Com.CSharp/Com0Com.CSharp.csproj
@@ -33,6 +33,7 @@
     <Reference Include="System.Net" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CmdRunner.cs" />
     <Compile Include="UacHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CrossoverPortPair.cs" />
